# agentbox

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  run-manager.sh
.github/: copilot-instructions.md
.github/workflows/: prune-actions-artifacts.yml  publish.yml
agent-manager/: main.py  pyproject.toml  requirements-dev.txt
agent-manager/src/agentbox_manager/: __init__.py  app.py  models.py  terminal.py
agent-manager/src/agentbox_manager/screens/: create_instance.py  folder_picker.py  help.py  startup.py  terminal_demo.py  terminal_widget.py
agent-manager/src/toadbox_manager/: __init__.py
agent-manager/src/toadbox_manager/screens/: create_instance.py  folder_picker.py  startup.py
agent-manager/tests/: conftest.py  test_app.py  test_app_extended.py  test_models.py
docs/: workspace-skeleton.md
skel/: Makefile
skel/.github/: copilot-instructions.md
skel/.github/instructions/: docker-image.instructions.md
skel/.github/skills/docker/: SKILL.md
skel/.github/skills/python/: SKILL.md
skel/.github/workflows/: publish.yml
toadbox-manager/: main.py  pyproject.toml
toadbox-manager/src/.toadbox/: docker-compose.yml
toadbox-manager/src/toadbox_manager/: __init__.py  app.py  models.py  terminal.py
toadbox-manager/src/toadbox_manager/screens/: create_instance.py  help.py
toadbox-manager/tests/: test_app.py  test_app_extended.py  test_models.py
